# clawtfup

./: .cfupignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BUNDLE.md  LICENSE  README.md  TODO.md  demo_policy_probe.py  pyproject.toml
.claude/: settings.json
.claude/commands/: noshit.md
.claude/hooks/: clawtfup-post-tool-use.sh  clawtfup-user-prompt-submit.sh
.clawtfup/: proxy_last_eval.json
.clawtfup/feedback/: README.md  feedback.yaml
.clawtfup/policies/: README.md  feedback.yaml  policy_eval.yaml
.codex/: hooks.json
.codex/hooks/: clawtfup-codex-post-tool-use.sh  clawtfup-codex-user-prompt-submit.sh
.cursor/: hooks.json
.cursor/hooks/: clawtfup-cursor-after-file-edit.sh  clawtfup-cursor-before-submit-prompt.sh  clawtfup-cursor-stop.sh
.gemini/: settings.json
.gemini/hooks/: clawtfup-gemini-after-tool.sh  clawtfup-gemini-before-agent.sh
.github/hooks/: clawtfup-vscode-post-tool-use.sh  clawtfup-vscode-stop.sh  clawtfup-vscode-user-prompt-submit.sh  clawtfup.json
.opencode/plugins/: clawtfup-policy.mjs
.qwen/: settings.json
.qwen/hooks/: clawtfup-qwen-post-tool-use.sh  clawtfup-qwen-stop.sh  clawtfup-qwen-user-prompt-submit.sh
examples/: calculator.py
schemas/: evaluation_report.json
snake/: game.py
tests/: test_agent_proxy.py  test_aider_proxy.py  test_cline_proxy.py  test_crush_proxy.py  test_defaults_git.py  test_evaluate_e2e.py  test_feedback_merge.py  test_findings_normalize.py  test_gemini_hooks.py  test_kilo_opencode_plugin.py  test_patch_apply.py  test_qwen_hooks.py  test_vscode_hooks.py  test_workspace.py
(+45 files in other folders)
